<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_overview"
             />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

            <!-- Brand field -->
            <EditText
                android:id="@+id/edit_item_brand"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_brand"
                android:inputType="textCapWords" />

            <!-- Description field -->
            <EditText
                android:id="@+id/edit_item_desc"
                style="@style/EditorFieldStyle"
                android:maxLines="2"
                android:hint="@string/hint_item_description"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/stock_measurement"
             />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                android:hint="@string/hint_item_quantity"
                style="@style/EditorFieldStyle"
                android:inputType="numberDecimal" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_item_weight"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>



</LinearLayout>