<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Listview to show Inventory Items -->
    <ListView
        android:id="@+id/list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- Label to show when there are no items-->
        <TextView
            android:id="@+id/empty_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/no_items" />

        <!-- Label to show when there are no items-->
        <TextView
            android:id="@+id/get_started_text"
            android:layout_below="@+id/empty_items_text"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_adding_items"
            android:textColor="#A2AAB0"
            android:textAppearance="?android:textAppearance"/>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_margin"
        android:src="@drawable/outline_inventory_black_24"
        android:contentDescription="@string/add"
        android:layout_alignParentEnd="true" />

</RelativeLayout>